# rustrade

./: .env.example  .gitignore  BILAN_ANALYST.md  CONTRIBUTING.md  Cargo.toml  GLOBAL_APP_DESCRIPTION.md  GLOBAL_APP_DESCRIPTION_VERSIONS.md  LICENSE  README.md  REVIEW_GUIDELINES.md  SECURITY.md  agents.md  grid.toml  grid_entry_opt.toml  metals.env  oanda.env.example  optimization_results.json  run_debug.sh  small_grid.toml  test_crypto_ws.py
.agent/: CRITICAL_ANALYSIS_PROMPT.md
.agent/skills/benchmarking/: SKILL.md
.agent/skills/documentation/: SKILL.md
.agent/skills/implementation/: SKILL.md
.agent/skills/rust-trading/: SKILL.md
.agent/skills/spec-management/: SKILL.md
.agent/skills/testing/: SKILL.md
.agent/skills/trading-code-review/: SKILL.md
.agent/workflows/: implement.md  validate.md
.cargo/: audit.toml  clippy.toml
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: trading_strategy.md
.github/workflows/: ci.yml  trading-review.yml
coverage/: tarpaulin-report.html
data/ml/: training_data.csv
docs/: FEATURES.md  INDEX.md  OBSERVABILITY.md  PERFORMANCE_REPORT.md  QUICK_REFERENCE.md  REVIEW_EXAMPLES.md  REVIEW_HOWTO.md  REVIEW_SYSTEM_SUMMARY.md  STRATEGIES.md  TRADING_CODE_REVIEW.md  architecture_audit_persistence.md  guide_strategie_simplifie.md
monitoring/: grafana_dashboard.json  prometheus.yml
scripts/: README.md  auto_benchmark.sh  benchmark_stocks.sh  compare_strategies.py  optimize_ml.sh  review_trading_code.sh  run_regime_benchmarks.sh  train_and_deploy.sh  validate_risk_filter.py  validate_risk_filter.sh  validate_strategies.sh
scripts/ml/: requirements.txt  train_lstm.py
specs/: README.md  architecture.md  features.md  modules.md
src/: config.rs  config.rs.broken  config_tests.rs  lib.rs  main.rs
src/application/: adaptive_optimization_service.rs  analyst.rs  analyst.rs.backup  candle_aggregator.rs  client.rs  executor.rs  expectancy_evaluator.rs  feature_engineering_service.rs  mod.rs  optimizer.rs  order_throttler.rs  performance_monitoring_service.rs  position_manager.rs  risk_manager.rs  scanner.rs  sentinel.rs  signal_generator.rs  simulator.rs  strategy_factory.rs  system.rs  trailing_stops.rs
src/application/agents/: analyst.rs  analyst.rs.bak  analyst_config.rs  candle_pipeline.rs  executor.rs  listener.rs  mod.rs  news_handler.rs  position_lifecycle.rs  regime_handler.rs  scanner.rs  sentinel.rs  signal_processor.rs  trade_evaluator.rs  user_agent.rs  warmup_service.rs
src/application/benchmarking/: engine.rs  mod.rs  reporting.rs
src/config/: broker_config.rs  mod.rs  observability_config.rs  risk_env_config.rs  simulation_config.rs  strategy_config.rs
src/domain/: errors.rs  events.rs  listener.rs  market_regime.rs  metrics.rs  mod.rs  optimization_history.rs  performance_evaluator.rs  performance_snapshot.rs  portfolio.rs  ports.rs  repositories.rs  risk_appetite.rs  sentiment.rs  types.rs
src/infrastructure/: alpaca.rs  alpaca_trading_stream.rs  alpaca_websocket.rs  binance.rs  binance_websocket.rs  circuit_breaker.rs  event_bus.rs  factory.rs  http_client_factory.rs  mock.rs  mod.rs  oanda.rs  optimal_parameters_persistence.rs  settings_persistence.rs
src/interfaces/: dashboard.rs  design_system.rs  mod.rs  ui.rs  ui_components.rs
tests/: adaptive_strategy_test.rs  agents.rs  audit_fixes_test.rs  backtest_alpaca.rs  backtest_e2e_integration.rs  circuit_breaker_integration_test.rs  concurrent_risk_test.rs  crypto_dynamic_scanner.rs  deadlock_test.rs  drawdown_integration.rs  e2e_trading_flow.rs  edge_cases_risk_manager.rs  repro_dynamic_empty_portfolio.rs  repro_sell_suppression.rs  risk_manager_service_integration.rs  settings_persistence_integration.rs  shutdown_integration.rs  verify_market_detection.rs  verify_smc_logic.rs
tests/agents/: analyst_tests.rs
tests/components/: adaptive_strategy.rs  backtest.rs  crypto_scanner.rs  execution_deadlock.rs  main.rs
tests/risk/: audit_fixes.rs  circuit_breaker.rs  concurrency.rs  edge_cases.rs  liquidation_retry_tests.rs  main.rs  risk_manager_tests.rs  service_integration.rs
tests/scenarios/: main.rs  scanner_flow.rs  stress_test_draft.rs  trading_flow.rs
translations/: README.md  en.json  fr.json
(+226 files in other folders)
