[package]
name = "rustrade"
version = "0.26.0"
edition = "2021"

[dev-dependencies]
tokio-test = "0.4"
rust_decimal_macros = "1.36"

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "chrono", "uuid", "rust_decimal"] }
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
futures-util = "0.3.31"
rand = "0.9.2"
reqwest = { version = "0.12.28", features = ["json"] }
rust_decimal = "1.39.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
ta = "0.5.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
toml = "0.8"  # For grid config parsing
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
url = "2.5.7"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
