[package]
name = "rustrade"
version = "0.52.0"
edition = "2024"

[dev-dependencies]
tokio-test = "0.4"
rust_decimal_macros = "1.36"

[dependencies]
crossbeam-channel = "0.5.14"
eframe = "0.31.0"
egui = "0.31.0"
egui_plot = "0.31.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "chrono", "uuid", "rust_decimal"] }
anyhow = "1.0"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
futures-util = "0.3.31"
rand = "0.9.2"
reqwest = { version = "0.12", features = ["json"] }
rust_decimal = "1.39.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
ta = "0.5.0"
thiserror = "2.0"
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
toml = "0.9"  # For grid config parsing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "2.5.7"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
# Binance API dependencies
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
futures = "0.3.31"

# HTTP Client Middleware & Retry
reqwest-middleware = "0.3"
reqwest-retry = "0.5"
task-local-extensions = "0.1"

