[package]
name = "rustrade"
version = "0.89.1"
edition = "2024"
default-run = "rustrade"

[features]
default = ["ui"]
ui = ["dep:eframe", "dep:egui", "dep:egui_plot"]

[[bin]]
name = "rustrade"
path = "src/main.rs"
required-features = ["ui"]

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[[bin]]
name = "optimize"
path = "src/bin/optimize.rs"

[dev-dependencies]
tokio-test = "0.4"
[dependencies]
rust_decimal_macros = "1.39"
crossbeam-channel = "0.5.15"
eframe = { version = "0.33.3", optional = true }
egui = { version = "0.33.3", optional = true }
egui_plot = { version = "0.34.0", optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "chrono", "uuid", "rust_decimal"] }
anyhow = "1.0"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
futures-util = "0.3.31"
rand = "0.9.2"
reqwest = { version = "0.13", features = ["json", "query"] }
rust_decimal = "1.39.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ta = "0.5.0"
thiserror = "2.0"
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
toml = "0.9"  # For grid config parsing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-attributes = "0.1"
url = "2.5.8"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
# Binance API dependencies
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
futures = "0.3.31"

# HTTP Client Middleware & Retry
reqwest-middleware = "0.5"
reqwest-retry = "0.9"
task-local-extensions = "0.1"
rss = "2.0.12"
vader_sentiment = "0.1"
rayon = "1.10"
statrs = "0.17"  # Statistical functions (Z-Score, rolling stats)

# Observability (push-based, no HTTP server)
prometheus = "0.14"
clap = { version = "4.5.54", features = ["derive"] }
smartcore = { version = "0.4.9", features = ["serde"] }
csv = "1.4.0"
bincode = "1.3"

